--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="box-1">
                     <center><button class="btn">Get My Free Guide</button></center>
 
-                    <div class="box-form">
+                    <div class="box-form first-form">
                         <form action="#">
                             <div class="form-img">
                                 <div class="img-main">
